# davidlibland.github.io

./: .ghci  .gitignore  LICENSE  README.md  about.html  about.markdown  archive.html  blog.cabal  blog.cabel  contact.html  contact.markdown  index.html  papers.html  papers.markdown  site.hs
css/: default.css
notebooks/: Clipping Circuits.ipynb
posts/: 2015-08-23-example.markdown  2016-08-26-bayesian-optimization.html  2016-08-26-bayesian-optimization.markdown  2018-11-10-saddle-points-and-sdg.html  2018-11-10-saddle-points-and-sdg.markdown  2020-06-16-origami-and-visualizing-sorts.html  2020-06-16-origami-and-visualizing-sorts.markdown  2020-08-30-hard-vs-soft-clipping.html  2020-08-30-hard-vs-soft-clipping.markdown
static/: bibtexbrowser.php
static/bib/: papers.bib
templates/: default.html  post.html
