name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidlibland/blog#readme
license:             BSD3
license-file:        LICENSE
author:              David Li-Bland
maintainer:          david.libland@gmail.com
copyright:           MIT
category:            website
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       markdown-unlit